emulation: Restore colors upon terminal reset.

https://bugzilla.gnome.org/show_bug.cgi?id=672210